--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "vue-router": "^4.1.3"
   },
   "devDependencies": {
+    "@cloudflare/workers-types": "^3.14.1",
     "@rushstack/eslint-patch": "^1.1.4",
     "@types/node": "^16.11.47",
     "@vitejs/plugin-vue": "^3.0.1",
@@ -27,6 +28,7 @@
     "prettier": "^2.7.1",
     "typescript": "~4.7.4",
     "vite": "^3.0.4",
-    "vue-tsc": "^0.39.5"
+    "vue-tsc": "^0.39.5",
+    "wrangler": "^2.0.27"
   }
 }
